--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -72,6 +72,220 @@
     "\n",
     "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ad80c9c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products=[\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "inventory={}\n",
+    "\n",
+    "\n",
+    "#Define a function named initialize_inventory that takes products as a parameter. Inside the function, implement the code for initializing the inventory dictionary using a loop and user input.\n",
+    "\n",
+    "def initialize_inventory(products):\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        valid_quantity = False\n",
+    "        while not valid_quantity:\n",
+    "            try:\n",
+    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "                if quantity < 0:\n",
+    "                    raise ValueError(\"Invalid quantity! Please enter a non-negative value.\")\n",
+    "                valid_quantity = True\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "        inventory[product] = quantity\n",
+    "    return inventory\n",
+    "    \n",
+    "   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "532a21fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a7aa0650",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Modify the `get_customer_orders` function to include error handling.\n",
+    "customer_orders=set()\n",
+    "\n",
+    "   \n",
+    "def get_customers_orders(inventory):\n",
+    "    temp = False\n",
+    "    number_of_orders=0\n",
+    "    #If the user enters an invalid number of orders (e.g., a negative value or a non-numeric value), display an error message and ask them to re-enter the number of orders.\n",
+    "    while not temp:\n",
+    "        try:\n",
+    "            number_of_orders = int(input(\"How many products do you want to order? (enter a number)\"))\n",
+    "            if number_of_orders < 0:\n",
+    "                raise ValueError(\"Input positive number\")\n",
+    "            temp=True\n",
+    "        except (ValueError, UnboundLocalError) as error:\n",
+    "            print(f\"Error: {error}\")\n",
+    "    #If the user enters an invalid product name (e.g., a product name that is not in the inventory), or that doesn't have stock available, display an error message and ask them to re-enter the product name. *Hint: you will need to pass inventory as a parameter*\n",
+    "    # Use a try-except block to handle the error and continue prompting the user until a valid product name is entered.\n",
+    "        temp3 = 0\n",
+    "        while temp3 < number_of_orders:\n",
+    "            try:\n",
+    "                product = input(f\"Enter product you want to order from the available products:{products} \").lower().strip()\n",
+    "                if product not in products:\n",
+    "                        raise ValueError(f\"Chosen product is not available. Choose again:\")\n",
+    "                if inventory.get(product, 0) == 0:\n",
+    "                        raise ValueError(f\"Chosen product not in stock. Choose again.\")\n",
+    "                customer_orders.add(product)\n",
+    "                temp3+=1\n",
+    "            except ValueError as error2:\n",
+    "                print(f\"Error: {error2}\",{product})\n",
+    "                        \n",
+    "    #The function should return the customer_orders set.\n",
+    "    return customer_orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "10d8c3d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def update_inventory(customer_orders, inventory):\n",
+    "    updated_inventory={product: inventory[product] - 1 if product in customer_orders  else inventory[product]  for product in inventory}    \n",
+    "    updated_inventory = {key : value for key, value in updated_inventory.items() if value != 0}\n",
+    "\n",
+    "    return updated_inventory\n",
+    "inventory = update_inventory(customer_orders, inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5f88e378",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_updated_inventory(inventory):\n",
+    "   print(\"Updated inventory is: \\n\") \n",
+    "   {print(key, \":\", value) for key, value in inventory.items()}\n",
+    "    \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1fab57f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def calculate_order_statistics(customer_orders,products):\n",
+    "    total_products_ordered=len(customer_orders)\n",
+    "    total_products=sum(inventory.values()) \n",
+    "    percentage_ordered=(total_products_ordered/total_products)*100\n",
+    "\n",
+    "    return total_products_ordered, percentage_ordered\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "050ffcfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def print_order_statistics(order_statistics):\n",
+    "    print('\\nOrder Statistics: \\n'\n",
+    "    '\\nNumber of ordered products:', order_statistics[0],\"\\n\" \n",
+    "    \"Percentage ordered:\", round(order_statistics[1],2),'%\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "15d549e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def calculate_total_price(customer_orders):\n",
+    "    total=0\n",
+    "    for product in customer_orders:\n",
+    "        valid_price = False\n",
+    "        while not valid_price:\n",
+    "            try:\n",
+    "                product_price = int(input(f\"Enter the price of {product}:  \"))\n",
+    "                total += product_price\n",
+    "                if product_price < 0:\n",
+    "                    raise ValueError(\"Invalid price\")\n",
+    "                valid_price = True\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "    return total\n",
+    "       \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5d3563f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: invalid literal for int() with base 10: 'd'\n",
+      "Error: Invalid quantity! Please enter a non-negative value.\n",
+      "Error: invalid literal for int() with base 10: 'ow'\n",
+      "Error: Chosen product not in stock. Choose again. {'hat'}\n",
+      "\n",
+      "Order Statistics: \n",
+      "\n",
+      "Number of ordered products: 2 \n",
+      "Percentage ordered: 5.0 %\n",
+      "\n",
+      "Updated inventory is: \n",
+      "\n",
+      "t-shirt : 10\n",
+      "mug : 9\n",
+      "book : 9\n",
+      "keychain : 10\n",
+      "\n",
+      "Total Price:  60 $\n"
+     ]
+    }
+   ],
+   "source": [
+    "inventory=initialize_inventory(products)\n",
+    "customer_orders = get_customers_orders(inventory)\n",
+    "order_statistics=calculate_order_statistics(customer_orders,products)\n",
+    "print_order_statistics(order_statistics)\n",
+    "updated_inventory=update_inventory(customer_orders,inventory)\n",
+    "inventory = update_inventory(customer_orders, inventory)\n",
+    "print_updated_inventory(inventory)\n",
+    "print(f\"\\nTotal Price: \", calculate_total_price(customer_orders), \"$\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -90,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
